# neuro_video_core

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
src/neuro_video_core/: __init__.py  exceptions.py
src/neuro_video_core/async_reader/: async_frame_reader.py
src/neuro_video_core/buffer/: ring_buffer.py
src/neuro_video_core/core/: video_core.py
src/neuro_video_core/decoders/: __init__.py  base_decoder.py  decoder_factory.py  decoder_type.py  hybrid_decoder.py  opencv_decoder.py  pyav_decoder.py
src/neuro_video_core/settings/: __init__.py  config.py
src/neuro_video_core/sources/: __init__.py  base_source.py  file_source.py  source_type.py
tools/timer/: __init__.py  timer_context.py  timer_manager.py  timer_stats.py
