[tool.poetry]
name = "neuro-video-core"
version = "0.1.0"
description = "NeuroVideoCore: low-level video I/O engine for deterministic frame access and seeking."
authors = ["omigutin <migutin83@yandex.ru>"]
license = "MIT"
readme = "README.md"

keywords = [
  "video",
  "frame",
  "frame-io",
  "video-decoding",
  "video-processing",
  "computer-vision",
  "cv",
  "opencv",
  "pyav",
  "ffmpeg",
  "streaming",
  "video-stream",
  "rtsp",
  "video-reader",
  "video-core",
  "media-io"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha"
]

packages = [
    { include = "neuro_video_core", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=2.0.0,<2.3.0"
opencv-python = "^4.12.0.88"
av = "^16.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.poetry.scripts]
file-path-parser = "neuro_video_core.cli:main"

[tool.poetry.urls]
Homepage = "https://github.com/omigutin/neuro_video_core"
Issues = ""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
